[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-sdk"
version = "0.1.0"
description = "A Python SDK for interacting with Docker container projects via REST API"
authors = [
    { name="Luke Robertson", email="luke.robertson@networkdirection.net" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/LukeRobertson/python-sdk"
